@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-07T01:07:41Z",
+  "timestamp" : "2025-12-08T01:02:16Z",
   "count_outdated" : 124,
   "uniques_outdated" : 106,
-  "count" : 125,
-  "uniques" : 107,
+  "count" : 126,
+  "uniques" : 108,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
